--- a/anywhere-fitness/src/less/classes.less
+++ b/anywhere-fitness/src/less/classes.less
@@ -7,7 +7,7 @@
     align-items: center;
     flex-flow: column nowrap;
     .class-search-bar {
-        width: 30%;
+        width: 24%;
         background-color: white;
         color: black;
 
@@ -15,15 +15,15 @@
     .class-search-card {
         margin-top: 5%;
         background-color: white;
-        width: 70%;
+        width: 50%;
         display: flex;
-        flex-flow:  nowrap;
-        justify-content: space-around;
+        flex-flow: row nowrap;
+        justify-content: space-between;
 
         .class-search-drops {
             background-color: white;
             color: black;
-            width: 30%;
+            width: 24%;
         }
 
 
